# ChainIQ-START-Hack-2026-

./: README.md  architecture.md  test_pricing.csv  test_req_enricher.py
.github/workflows/: deploy-backend.yml
backend/: Dockerfile  README.md  export_schema.py  openapi.json  pyproject.toml
backend/app/: config.py  main.py
backend/app/data/: store.py
backend/app/db/: database.py  repository.py
backend/app/integrations/: sap_mock.py
backend/app/models/: escalation.py  extraction.py  state.py
backend/app/pipeline/: runner.py  state2_validation.py  state3_policy.py  state4_commercial.py  state5_output.py  state6_escalation.py
backend/app/routers/: admin.py  sap.py
backend/data/: historical_awards.csv  pricing.csv  suppliers.csv
backend/migrations/: 002_seed_mock_data.sql
backend/tests/: README.md  conftest.py  test_pipeline_backtest.py  test_pipeline_edge_cases.py  test_pipeline_known.py  test_pipeline_scenarios.py  test_pipeline_schema.py
bruno/: admin-get-request.bru  admin-list-requests.bru  admin-resolve-request.bru  admin-resume-request.bru  bruno.json  pipeline-run-minimal.bru  pipeline-run.bru
bruno/environments/: prod.bru
data/: categories.csv  test_requests.json
deterministic/: deterministic_filtering.py  enriched_suppliers.json  enriched_suppliersREQ-000005.json  filter_log.json  filter_log_REQ-000005.json  filtered_suppliers.json  filtered_suppliers_REQ-000005.json  policies_added.py  test_wrapper.py
infra/: postgresql.bicep
